tests/ui/macros/unreachable-fmt-msg.run.stderr
thread 'main' panicked at $DIR/unreachable-fmt-msg.rs:6:5:
internal error: entered unreachable code: 6 is not prime
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
